Further styling fixes on mobile devices after merge with master

--- a/src/Components/CarListItem/CarRentButton/CarRentButton.css
+++ b/src/Components/CarListItem/CarRentButton/CarRentButton.css
@@ -32,6 +32,7 @@
 }
 
 @media screen and (max-width: 650px) {
+    .RentBtn,
     .RentBtnReserved {
         font-size: 16px;
         width: 120px;
